kubernetesfiles/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-deployment
  labels:
    app: wisecow
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: pav30/wisecow:latest  # Replace with your Docker Hub image
          ports:
            - containerPort: 4499  # Changed port to 4499
